Re-added non-Twitch follows

--- a/options/options.html
+++ b/options/options.html
@@ -24,6 +24,31 @@
     <br>
 
     <br>
+    <strong class="i18n" id="followsSettings"></strong>
+    <br>
+
+    <label class="i18n" id="enableNonTwitchFollows"></label>
+    <input class="checkbox" type="checkbox" id="nonTwitchFollows">
+    <br>
+
+    <span id="nonTwitch">
+
+
+    <!--<input class="i18n button" type="button" id="importFollows">-->
+    <!--<<input type="text" id="importChannel">-->
+
+    <label class="i18n" id="importFollows"></label>
+    <input type="file" id="importButton">
+    <br>
+    <input class="i18n button" type="button" id="exportFollows">
+    <br>
+    <input class="i18n button" type="button" id="unfollowAll">
+
+    </span>
+
+
+
+    <br>
     <strong class="i18n" id="nameOrNotificationClicked"></strong>
     <br>
 
@@ -46,11 +71,11 @@
         <br>
 
         <label class="i18n" id="favoriteDesktopNotifications"></label>
-        <input class="checkbox" type="checkbox" id="favoritesDesktopNotificiations">
+        <input class="checkbox" type="checkbox" id="favoritesDesktopNotifications">
         <br>
 
         <label class="i18n" id="favoriteAudioNotifications"></label>
-        <input class="checkbox" type="checkbox" id="favoritesAudioNotificiations">
+        <input class="checkbox" type="checkbox" id="favoritesAudioNotifications">
         <br>
 
         <input class="i18n button" type="button" id="unfavoriteAll">
@@ -64,7 +89,7 @@
         <br>
 
         <label class="i18n" id="nonfavoriteAudioNotifications"></label>
-        <input class="checkbox" type="checkbox" id="nonfavoritesAudioNotificiations">
+        <input class="checkbox" type="checkbox" id="nonfavoritesAudioNotifications">
         <br>
 
         <span id="audioNotification">
