Split up some code and potentially fixed issues

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -105,6 +105,7 @@
       <div class="contactInfo" id="discord"></div>
     </div>
   </div>
+  <script src="card.js"></script>
   <script src="popup.js"></script>
 </body>
 
