Added private browsing explanation thing

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -78,7 +78,11 @@
     </div>
   </div>
   <div class="contentArea" id="contentArea">
-
+    <div class="noResults">Twitch Fox currently doesn't work with Private Browsing! Sorry!</div>
+    <br>
+    <div class="noResults">If you're seeing this and you're not using Private Browsing,</div>
+    <div class="noResults">please let me know with the details of how this happened!</div>
+    <div class="noResults">-Hunter</div>
   </div>
   <div class="contentArea hide" id="aboutPage">
     <div class="bigTwitchFox"></div>
