Dark mode + channel logos

--- a/options/options.html
+++ b/options/options.html
@@ -8,7 +8,11 @@
 
 <body>
   <form>
-    <strong class="i18n" id="easeOfUseSettings"></strong>
+    <strong class="i18n" id="userInterfaceSettings"></strong>
+    <br>
+
+    <label class="i18n" id="useDarkMode"></label>
+    <input class="checkbox" type="checkbox" id="darkMode">
     <br>
 
     <label class="i18n" id="enableTooltips"></label>
@@ -21,6 +25,10 @@
 
     <label class="i18n" id="showWhatsNewMessage"></label>
     <input class="checkbox" type="checkbox" id="showWhatsNew">
+    <br>
+
+    <label class="i18n" id="showChannelLogos"></label>
+    <input class="checkbox" type="checkbox" id="showLogos">
     <br>
 
     <br>
