--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="popup.css" />
+  <link id="darkMode" rel="stylesheet" />
   <link id="styleLink" rel="stylesheet" />
 </head>
 
