May have fixed odd UI issue

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -44,6 +44,7 @@
       <span class="tooltip" id="loginTip"></span>
     </div>
   </div>
+  <div class="leftBarBack"></div>
   <div class="leftBar">
     <div class="menuButton tab games" id="games">
       <span class="tooltip" id="gamesTip"></span>
